# Sentinel-HIDS

./: .gitignore  CMakeLists.txt  README.md
Sentinel/: AlertSender.cpp  AlertSender.h  FileMonitor.cpp  FileMonitor.h  LogWatcher.cpp  LogWatcher.h  Service.cpp  Service.h  config.json  main.cpp  test.txt
